# actix-web-practise

./: .gitignore  Cargo.toml  README.md
src/: custom_error.rs  custom_middleware.rs  data_fetcher.rs  extractors.rs  from_db.rs  main.rs  nesting.rs  tls.rs
