[package]
name = "actix_hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3.1", features = ["rustls"] }
env_logger = "0.10.0"
rustls = "0.20.2"
rustls-pemfile = "1.0.2"
