[package]
name = "actix_hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = { version = "4.3.1", features = ["rustls"] }
actix-web-lab = "0.19.1"
dotenvy = "0.15.7"
env_logger = "0.10.0"
log = "0.4.18"
rustls = "0.20.2"
rustls-pemfile = "1.0.2"
serde = { version = "1.0.163", features = ["derive"] }
stargate-grpc = { version = "0.4.0", features = ["stargate-grpc-derive"] }
tokio = { version = "1.28.2", features = ["full"] }
